# Thermocycler

./: .gitignore  CMakeLists.txt  README.md  Relay.cpp  TemperatureSensor.h  constants.h
sketch/: Cycles.cpp  Cycles.h  constants.h  sketch.ino
src/: .gitignore  CMakeLists.txt  Makefile  ano.ini  platformio.ini
src/lib/RotaryEncoder/: RotaryEncoder.cpp  RotaryEncoder.h
src/sketch/: Button.cpp  Button.h  Cycles.cpp  Cycles.h  Interface.h  Relay.h  ToggleButton.cpp  ToggleButton.h  sketch.ino
src/src/: Cycles.cpp  Cycles.h  Interface.cpp  Interface.h  Relay.cpp  Relay.h  RotaryEncoderPosition.h  TempTimeQueue.cpp  TempTimeQueue.h  TemperatureSensor.h  Thermocycler.cpp  Thermocycler.h  ToggleButton.cpp  ToggleButton.h  constants.h  main.cpp  sketch.ino
src/test/: CMakeLists.txt  CycleTests.cpp  CycleTests.h  Tests.cpp  live_plot.py  output.csv  test.py
test/: CycleTests.cpp  CycleTests.h  Tests.cpp
